// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-routes build and serve should generate the expected files 1`] = `
Object {
  "AsyncComponent-18e291a94ae61b0bfa24.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-0e82719ea3ab71aafb06.css": ._91MnZhe {
  color: #00f;
}
,
  "handlers-Details-522fb25a4ee671e27ba6.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home-62bf94bf0fd2ba3c2aa2.css": ._1QX0Hyt {
  color: red;
}
,
  "handlers-Home-e90deda4bbe0067652a8.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-3043a664d3b740d1dd46.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/$id/index.html": SCRIPTS: Array [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-ce252299d63aafaa3e74.js",
    "/static/place/vendors~main-16567fe31d1760735260.js",
    "/static/place/main-3043a664d3b740d1dd46.js",
    "/static/place/handlers-Details-522fb25a4ee671e27ba6.js",
    "/static/place/AsyncComponent-18e291a94ae61b0bfa24.js",
  ]
CSS: Array [
    "/static/place/handlers-Details-0e82719ea3ab71aafb06.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_91MnZhe">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [1,0]
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: Array [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-ce252299d63aafaa3e74.js",
    "/static/place/vendors~main-16567fe31d1760735260.js",
    "/static/place/main-3043a664d3b740d1dd46.js",
    "/static/place/handlers-Home-e90deda4bbe0067652a8.js",
  ]
CSS: Array [
    "/static/place/handlers-Home-62bf94bf0fd2ba3c2aa2.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1QX0Hyt">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [2]
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "production/nz/details/$id/index.html": SCRIPTS: Array [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-ce252299d63aafaa3e74.js",
    "/static/place/vendors~main-16567fe31d1760735260.js",
    "/static/place/main-3043a664d3b740d1dd46.js",
    "/static/place/handlers-Details-522fb25a4ee671e27ba6.js",
    "/static/place/AsyncComponent-18e291a94ae61b0bfa24.js",
  ]
CSS: Array [
    "/static/place/handlers-Details-0e82719ea3ab71aafb06.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_91MnZhe">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"nz"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [1,0]
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/nz/index.html": SCRIPTS: Array [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-ce252299d63aafaa3e74.js",
    "/static/place/vendors~main-16567fe31d1760735260.js",
    "/static/place/main-3043a664d3b740d1dd46.js",
    "/static/place/handlers-Home-e90deda4bbe0067652a8.js",
  ]
CSS: Array [
    "/static/place/handlers-Home-62bf94bf0fd2ba3c2aa2.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1QX0Hyt">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"nz"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [2]
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "runtime-ce252299d63aafaa3e74.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-16567fe31d1760735260.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes build and serve should return details page 1`] = `
SCRIPTS: Array [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime-ce252299d63aafaa3e74.js",
  "/static/place/vendors~main-16567fe31d1760735260.js",
  "/static/place/main-3043a664d3b740d1dd46.js",
  "/static/place/handlers-Details-522fb25a4ee671e27ba6.js",
  "/static/place/AsyncComponent-18e291a94ae61b0bfa24.js",
]
CSS: Array [
  "/static/place/handlers-Details-0e82719ea3ab71aafb06.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_91MnZhe">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [1,0]
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="_91MnZhe">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes build and serve should return home page 1`] = `
SCRIPTS: Array [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime-ce252299d63aafaa3e74.js",
  "/static/place/vendors~main-16567fe31d1760735260.js",
  "/static/place/main-3043a664d3b740d1dd46.js",
  "/static/place/handlers-Home-e90deda4bbe0067652a8.js",
]
CSS: Array [
  "/static/place/handlers-Home-62bf94bf0fd2ba3c2aa2.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1QX0Hyt">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      [2]
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`multiple-routes start should render details page correctly 1`] = `
SCRIPTS: Array [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/vendors~devServerOnly~main.js",
  "/vendors~main.js",
  "/main.js",
  "/vendors~handlers-Details~handlers-Home.js",
  "/handlers-Details.js",
  "/AsyncComponent.js",
]
CSS: Array [
  "/handlers-Details.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Details"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
    <link data-chunk="handlers-Details"
          rel="preload"
          as="script"
          href="scripts[6]"
    >
    <link data-chunk="AsyncComponent"
          rel="preload"
          as="script"
          href="scripts[7]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Details__root___91MnZhe">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      ["vendors~handlers-Details~handlers-Home","handlers-Details","AsyncComponent"]
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[5]"
    >
    </script>
    <script async
            data-chunk="handlers-Details"
            src="scripts[6]"
    >
    </script>
    <script async
            data-chunk="AsyncComponent"
            src="scripts[7]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="Details__root___91MnZhe">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes start should render home page correctly 1`] = `
SCRIPTS: Array [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/vendors~devServerOnly~main.js",
  "/vendors~main.js",
  "/main.js",
  "/vendors~handlers-Details~handlers-Home.js",
  "/handlers-Home.js",
]
CSS: Array [
  "/handlers-Home.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-WHrb12igXgDsoQpp4ijb4PgZBl4AXNijY5y96KkF2hY=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body{background:pink}
    </style>
    <link data-chunk="handlers-Home"
          rel="stylesheet"
          href="styles[0]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[1]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[2]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[3]"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="scripts[4]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[5]"
    >
    <link data-chunk="handlers-Home"
          rel="preload"
          as="script"
          href="scripts[6]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Home__root___1QX0Hyt">
        Welcome to the Home page - au
      </h1>
    </div>
    <script id="__SKU_CLIENT_CONTEXT__"
            type="application/json"
    >
      {"site":"au"}
    </script>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      ["vendors~handlers-Details~handlers-Home","handlers-Home"]
    </script>
    <script async
            data-chunk="main"
            src="scripts[1]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[2]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[3]"
    >
    </script>
    <script async
            data-chunk="main"
            src="scripts[4]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[5]"
    >
    </script>
    <script async
            data-chunk="handlers-Home"
            src="scripts[6]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
